tetrate/tis0105/.chainsaw-test/good-resource.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: good-resource-1
spec:
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/test/sa/existent-sa"]
