tetrate/tis0105/.chainsaw-test/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: existent-sa
