tetrate/tis0105/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-existing-service-account
spec:
  validationFailureAction: Enforce
