tetrate/tis0105/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-existing-service-account
spec:
  steps:
    - name: apply-virtualservice-policy
      try:
        - apply:
            file: ../check-existing-service-account.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-service-resource
      try: 
        - apply:
            file: serviceaccount.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
